clusters/home/internal/jellyfin/jellyfin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: jellyfin-storage
              mountPath: /config
            - name: jellyfin-storage
              mountPath: /media
      volumes:
        - name: jellyfin-storage
          persistentVolumeClaim:
            claimName: jellyfin
